version/0.12/_sources/api/solver/_autosummary/settings/mp_specific_time_stepping.rst.txt
:orphan:

.. _mp_specific_time_stepping:

mp_specific_time_stepping
=========================

.. currentmodule:: ansys.fluent.core.solver.settings_231.mp_specific_time_stepping

.. autoclass:: mp_specific_time_stepping
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

======================================================   =======================================

Child                                                                                    Summary

======================================================   =======================================
:ref:`enabled <enabled_2>`                                                      'enabled' child.

:ref:`global_courant_number <global_courant_number>`                  Set Global Courant Number.

:ref:`initial_time_step_size <initial_time_step_size>`               Set Initial Time Step Size.

:ref:`fixed_time_step_size <fixed_time_step_size>`               Set Number of Fixed Time Steps.

:ref:`min_time_step_size <min_time_step_size>`                       Set Minimum Time Step Size.

:ref:`max_time_step_size <max_time_step_size>`                       Set Maximum Time Step Size.

:ref:`min_step_change_factor <min_step_change_factor>`           Set Minimum Step Change Factor.

:ref:`max_step_change_factor <max_step_change_factor>`           Set Maximum Step Change Factor.

:ref:`update_interval <update_interval>`                     Set Time Step Size Update Interval.

======================================================   =======================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`transient_controls <transient_controls>`       'transient_controls' child.

==============================================   ===============================

