version/0.19/_sources/api/solver/_autosummary/settings/mp_specific_time_stepping.rst.txt
:orphan:

.. _mp_specific_time_stepping:

mp_specific_time_stepping
=========================

.. autoclass:: ansys.fluent.core.solver.settings_241.mp_specific_time_stepping.mp_specific_time_stepping
    :show-inheritance:

.. rubric:: Attributes

======================================================   ==============================================================

Attribute                                                                                                       Summary

======================================================   ==============================================================
:ref:`enabled <enabled_19>`                                  Enable/disable multiphase-specific adaptive time stepping.

:ref:`global_courant_number <global_courant_number>`                                         Set Global Courant Number.

:ref:`initial_time_step_size <initial_time_step_size>`                                      Set Initial Time Step Size.

:ref:`fixed_time_step_size <fixed_time_step_size>`                                      Set Number of Fixed Time Steps.

:ref:`min_time_step_size <min_time_step_size>`                                              Set Minimum Time Step Size.

:ref:`max_time_step_size <max_time_step_size>`                                              Set Maximum Time Step Size.

:ref:`min_step_change_factor <min_step_change_factor>`                                  Set Minimum Step Change Factor.

:ref:`max_step_change_factor <max_step_change_factor>`                                  Set Maximum Step Change Factor.

:ref:`update_interval <update_interval>`                                            Set Time Step Size Update Interval.

======================================================   ==============================================================

.. rubric:: Included in:

==============================================   ==================================

Parent                                                                      Summary

==============================================   ==================================
:ref:`transient_controls <transient_controls>`       Enter transient controls menu.

==============================================   ==================================

